crates/sutura-app/tests/snapshots/average-order-june__rows.snap
---
source: crates/sutura-app/tests/golden.rs
expression: rows
---
columns:
  - period
  - average_order
rows:
  - - Text: 2026-06-01
    - Real: 63335.77777777778
