crates/sutura-app/tests/snapshots/average-order-june__rows@duckdb.snap
---
source: crates/sutura-app/tests/golden/data_systems.rs
expression: stable(rows)
---
period	average_order
Text(2026-06-01)	Real(6.333577777778e4)
